# amadeus-agent

./: .fastmcp-version  README.md  pyproject.toml  server.py
agent/: types.py  utils.py
agent/resources/: airport-codes.csv
agent/services/: airport.py  amadeus.py
agent/tools/: __init__.py  airport.py  amadeus.py
tests/: test_airport.py  test_amadeus.py
